adding pic to header

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 ---
 layout: home
 author_profile: true
+header:
+  image: "https://image.shutterstock.com/z/stock-photo-san-antonio-texas-usa-downtown-skyline-796867324.jpg"
 ---
