First Spotfire post-update SQLDF Post

--- a/_posts/2018-09-25-Spotfire SQLDF.html
+++ b/_posts/2018-09-25-Spotfire SQLDF.html
@@ -127,7 +127,7 @@ categories: [Spotfire]
                 </li>
                 <ul>
                   <li>
-                    <div><img src="images/SQLDF_1.png" type="image/png" data-filename="SQLDF_1.png" width="362"/></div>
+                    <div><img src="/images/SQLDF_1.png" type="image/png" data-filename="SQLDF_1.png" width="362"/></div>
                   </li>
                 </ul>
                 <li>
@@ -135,7 +135,7 @@ categories: [Spotfire]
                 </li>
                 <ul>
                   <li>
-                    <div><img src="images/SQLDF_2.png" type="image/png" data-filename="SQLDF_2.png" width="361"/></div>
+                    <div><img src="/images/SQLDF_2.png" type="image/png" data-filename="SQLDF_2.png" width="361"/></div>
                   </li>
                 </ul>
                 <li>
