--- a/_posts/2018-09-25-Spotfire SQLDF.html
+++ b/_posts/2018-09-25-Spotfire SQLDF.html
@@ -143,7 +143,7 @@ categories: [Spotfire]
                 </li>
                 <ul>
                   <li>
-                    <div><img src="images/SQLDF_3.png" type="image/png" data-filename="SQLDF_3.png" width="363"/></div>
+                    <div><img src="/images/SQLDF_3.png" type="image/png" data-filename="SQLDF_3.png" width="363"/></div>
                   </li>
                 </ul>
                 <li>
@@ -151,10 +151,10 @@ categories: [Spotfire]
                 </li>
                 <ul>
                   <li>
-                    <div><img src="images/SQLDF_6.png" type="image/png" data-filename="SQLDF_6.png" width="360"/></div>
+                    <div><img src="/images/SQLDF_6.png" type="image/png" data-filename="SQLDF_6.png" width="360"/></div>
                   </li>
                   <li>
-                    <div><img src="images/SQLDF_7.png" type="image/png" data-filename="SQLDF_7.png" width="358"/></div>
+                    <div><img src="/images/SQLDF_7.png" type="image/png" data-filename="SQLDF_7.png" width="358"/></div>
                   </li>
                 </ul>
                 <li>
