First Spotfire post-update SQLDF Post- Fix Pictures

--- a/_posts/2018-09-25-Spotfire SQLDF.html
+++ b/_posts/2018-09-25-Spotfire SQLDF.html
@@ -162,7 +162,7 @@ categories: [Spotfire]
                 </li>
                 <ul>
                   <li>
-                    <div><img src="images/SQLDF_8.png" type="image/png" data-filename="SQLDF_8.png" width="438"/></div>
+                    <div><img src="/images/SQLDF_8.png" type="image/png" data-filename="SQLDF_8.png" width="438"/></div>
                   </li>
                 </ul>
               </ol>
