--- a/_posts/2018-09-25-Spotfiretest.html
+++ b/_posts/2018-09-25-Spotfiretest.html
@@ -1,3 +1,6 @@
+---
+categories: [Spotfire]
+---
 <html>
 <head>
     <meta charset="utf-8"/>
@@ -64,4 +67,4 @@
         return null;
     }
 </script>
-</html>
+</html>2
