--- a/_posts/2018-09-25-Spotfire SQLDF.html
+++ b/_posts/2018-09-25-Spotfire SQLDF.html
@@ -4,7 +4,7 @@ categories: [Spotfire]
 <html>
 
 <head>
-  <title>Evernote Export</title>
+  <title>Spotfire SQLDF</title>
   <basefont face="Segoe UI" size="2" />
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
   <meta name="exporter-version" content="Evernote Windows/307881 (en-US, DDL); Windows/10.0.0 (Win64);" />
