--- a/_pages/about.html
+++ b/_pages/about.html
@@ -1,12 +1,8 @@
 ---
-layout: single
+layout: post
 title: "About"
 permalink: /about/
-#header:
-#image: "/images/BioPic.jpg"
 ---
-
-
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
