--- a/_pages/about.html
+++ b/_pages/about.html
@@ -5,4 +5,8 @@ permalink: /about/
 #header:
   #image: "/images/BioPic.jpg"
 ---
-Hello World
+I have a workforce call center background along with previous
+leadership experience with specialties in data  visualization and
+analytics.  Few mentionable skills are coding languages including but
+not limited to  sql , html, css , vba and diverse call center background
+with realtime analytics, scheduling ,and  call routing to name a few
